# caffe

./: .gitignore  CMakeLists.txt  README.md
cmake/: ConfigGen.cmake  Dependencies.cmake  ProtoBuf.cmake
cmake/Modules/: FindOpenBLAS.cmake  FindWindowsSDK.cmake
include/caffe/: common.hpp  data_layers.hpp  filler.hpp  layer.hpp  layer_factory.hpp  net.hpp  parallel.hpp  solver.hpp
include/caffe/util/: io.hpp  rng.hpp  upgrade_proto.hpp
src/caffe/: CMakeLists.txt  common.cpp  layer.cpp  layer_factory.cpp  net.cpp  solver.cpp
src/caffe/layers/: absval_layer.cpp  dropout_layer.cpp  spp_layer.cpp
src/caffe/util/: io.cpp  math_functions.cpp  upgrade_proto.cpp
